# deepstream_udpmulticast_sink

./: .clang-format  .gitignore  CMakeLists.txt  README.md  eo_protocol_parser.cpp  eo_protocol_parser.h  gstmynetwork.cpp  gstmynetwork.h  gstudpmulticast_sink.cpp  gstudpmulticast_sink.h  recv_multicast.py  test_json_format.cpp  报文说明.md
receiver/: CMakeLists.txt  eo_receiver.cpp  eo_receiver.h  main.cpp
